# mcut-boolean-viewer

./: .gitignore  CMakeLists.txt  README.md  build_deps.bat  build_deps.sh
include/: BooleanOp.h  Camera.h  ObjLoader.h  RenderMesh.h  Shader.h
shaders/: mesh.frag
src/: main.cpp
